@@ -1,5 +1,10 @@
 2008-08-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/buildbot/status/web/__init__.py: also include total of
+	"build went ok but checks failed" in slave summary.
+
+2008-08-15  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/status/web/__init__.py,
 	buildbot/public_html/lgo.css: paint failures in 'make check' as orange.
 
